--- a/css/styles.css
+++ b/css/styles.css
@@ -275,6 +275,35 @@ body {
   margin-bottom: var(--card-grid-gap);
 }
 
+.advantages-item::before {
+  content: '';
+  display: block;
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+
+  background-color: var(--secondary-light-bg-color);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 4px;
+}
+
+.antenna::before {
+  background-image: url(../images/advantages/antenna.svg);
+}
+
+.clock::before {
+  background-image: url(../images/advantages/clock.svg);
+}
+
+.diagram::before {
+  background-image: url(../images/advantages/diagram.svg);
+}
+
+.astronaut::before {
+  background-image: url(../images/advantages/astronaut.svg);
+}
+
 .advantages .title {
   margin-bottom: 10px;
 
