--- a/css/styles.css
+++ b/css/styles.css
@@ -225,6 +225,13 @@ body {
   margin: 0 auto;
   color: var(--main-bg-color);
   background-color: var(--secondary-dark-bg-color);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero/hero-bg.jpg);
+  background-position: center;
+  object-fit: cover;
 }
 
 .hero-container {
