--- a/css/styles.css
+++ b/css/styles.css
@@ -408,9 +408,37 @@ body {
 }
 
 .team .position {
+  margin-bottom: 16px;
+
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+}
+
+.social-links {
+  display: flex;
+  justify-content: center;
+}
+
+.social-links-item {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: var(--main-bg-color);
+  border: 1px solid teal;
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.social-icon {
+  width: 20px;
+  height: 20px;
 }
 /* TEAM end */
 
