--- a/css/styles.css
+++ b/css/styles.css
@@ -434,11 +434,16 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
+
+  color: var(--primary-text-color);
 }
 
 .social-icon {
   width: 20px;
   height: 20px;
+
+  fill: currentColor;
+  color: ;
 }
 /* TEAM end */
 
