--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 :root {
   --card-grid-gap: 30px;
 
+  /* colors */
   --primary-text-color: #757575;
   --title-text-color: #212121;
   --accent-color: #2196f3;
@@ -9,9 +10,11 @@
   --secondary-dark-bg-color: #2f303a;
   --icon-light-grey-color: #afb1b8;
 
+  /* fonts */
   --main-font-family: 'Roboto', sans-serif;
   --logo-font-family: 'Raleway', sans-serif;
 
+  /* shadows */
   --shadow-team-card: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 
@@ -20,10 +23,13 @@
 
   --shadow-filter-button-hover: 0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+
+  /* temporary border */
+  --tborder: 1px solid #086879;
 }
+/* ============================== */
 
 /* RESETS */
-
 img {
   display: block;
   max-width: 100%;
@@ -79,7 +85,7 @@ body {
   padding-right: 15px;
 }
 
-/* HIDE HEADINGS */
+/* hide headings */
 .visually-hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
@@ -91,7 +97,7 @@ body {
   overflow: hidden;
 }
 
-/* LOGO  */
+/* logo  */
 .logo {
   font-weight: 700;
   font-size: 26px;
@@ -104,7 +110,7 @@ body {
   color: var(--accent-color);
 }
 
-/* BUTTONS */
+/* buttons */
 .button {
   color: var(--title-text-color);
   background-color: var(--secondary-light-bg-color);
@@ -126,7 +132,38 @@ body {
   box-shadow: var(--shadow-filter-button-hover);
 }
 
-/* SECTION */
+/* social-links */
+.social-links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-right: -10px;
+}
+
+.social-links-item {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+
+  border-radius: 50%;
+}
+
+.social-icon {
+  width: 20px;
+  height: 20px;
+
+  fill: currentColor;
+}
+
+/* section */
 .section .section-title {
   margin-top: 0;
   margin-bottom: 50px;
@@ -138,6 +175,7 @@ body {
   line-height: 1.17;
   text-align: center;
 }
+
 /* COMMON STYLES end */
 /* ============================== */
 
@@ -160,7 +198,7 @@ body {
   color: var(--title-text-color);
 }
 
-/* SITE NAV */
+/* site nav */
 .main-nav {
   display: flex;
   align-items: center;
@@ -195,7 +233,7 @@ body {
   color: var(--accent-color);
 }
 
-/* CONTACTS */
+/* contacts */
 .contacts {
   display: flex;
 }
@@ -245,6 +283,7 @@ body {
   fill: var(--accent-color);
 }
 /* HEADER end */
+/* ============================== */
 
 /* HERO */
 .hero {
@@ -294,6 +333,7 @@ body {
   cursor: pointer;
 }
 /* HERO end */
+/* ============================== */
 
 /* ADVANTAGES */
 .advantages {
@@ -353,6 +393,7 @@ body {
   line-height: 1.71;
 }
 /* ADVANTAGES end */
+/* ============================== */
 
 /* WHAT WE DO */
 .whatwedo-container {
@@ -371,6 +412,8 @@ body {
   margin-right: var(--card-grid-gap);
   margin-bottom: var(--card-grid-gap);
 }
+/* WHAT WE DO end */
+/* ============================== */
 
 /* TEAM */
 .team {
@@ -418,34 +461,10 @@ body {
   text-align: center;
 }
 
-.social-links {
-  display: flex;
-  justify-content: center;
-}
-
-.social-links-item {
-  width: 44px;
-  height: 44px;
-}
-
-.social-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-
+/* social icon colors */
+.team .social-link {
   color: var(--icon-light-grey-color);
-
-  border-radius: 50%;
   background-color: var(--main-bg-color);
-}
-
-.social-icon {
-  width: 20px;
-  height: 20px;
-
-  fill: currentColor;
 }
 
 .social-link:hover,
@@ -454,15 +473,9 @@ body {
   background-color: var(--accent-color);
 }
 /* TEAM end */
+/* ============================== */
 
 /* CLIENTS */
-/* .clients-container > * {
-  outline: 1px solid red;
-}
-.clients-item {
-  outline: 1px solid teal;
-} */
-
 .clients {
   display: flex;
   margin-right: calc(-1 * var(--card-grid-gap));
@@ -502,6 +515,7 @@ body {
   fill: currentColor;
 }
 /* CLIENTS end */
+/* ============================== */
 
 /* FOOTER */
 .page-footer {
@@ -509,13 +523,26 @@ body {
   background-color: var(--secondary-dark-bg-color);
 }
 
-.page-adress .item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
 .footer-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
   padding-top: 60px;
   padding-bottom: 60px;
+
+  color: var(--main-bg-color);
+}
+
+.footer-wrapper {
+  margin-right: 70px;
+}
+
+.page-adress {
+  min-width: 231px;
+}
+
+.page-adress .item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .footer-adress {
@@ -541,7 +568,31 @@ body {
 .footer-contacts:focus {
   color: var(--accent-color);
 }
+
+.page-footer .title {
+  margin-bottom: 20px;
+
+  color: var(--main-bg-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+/* social icon colors */
+.page-footer .social-link {
+  color: var(--main-bg-color);
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.page-footer .social-link:hover,
+.page-footer .social-link:focus {
+  color: var(--main-bg-color);
+  background-color: var(--accent-color);
+}
 /* FOOTER end */
+/* ============================== */
+/* ============================== */
 
 /* PORTFOLIO */
 .filter-buttons {
