--- a/css/styles.css
+++ b/css/styles.css
@@ -510,9 +510,39 @@ body {
 }
 
 .clients-icon {
-  width: 89px;
-  height: 59px;
+  width: 80px;
+  height: 50px;
   fill: currentColor;
+}
+
+.clients-icon.company-1 {
+  width: 44px;
+  height: 49px;
+}
+
+.clients-icon.company-2 {
+  width: 40px;
+  height: 52px;
+}
+
+.clients-icon.company-3 {
+  width: 41px;
+  height: 43px;
+}
+
+.clients-icon.company-4 {
+  width: 80px;
+  height: 42px;
+}
+
+.clients-icon.company-5 {
+  width: 59px;
+  height: 47px;
+}
+
+.clients-icon.company-6 {
+  width: 88px;
+  height: 45px;
 }
 /* CLIENTS end */
 /* ============================== */
